examples/bad/hold_use_after_move.mko
// Must fail: use after move via hold rebind (non-Copy).
fn main() {
    hold let x = "hi"
    hold let y = x
    print(x)
}
